--- a/html/css/home.css
+++ b/html/css/home.css
@@ -2,14 +2,14 @@
 /*********************/
 /* News 一覧 */
 /*********************/
-#news {
+#top #news {
   width: 50%;
   margin-left: auto;
   margin-right: auto;
   font-weight: 700;
 }
 
-#news ul li {
+#top #news ul li {
   margin-top: 20px;
   padding: 0 10px 10px 160px;
   border-bottom: 1px dotted #453319;
@@ -35,18 +35,18 @@
 /*********************/
 /* お悩み一覧  */
 /*********************/
-#problem {
+#trouble {
   width: 80%;
   /*  margin-left: auto;
   margin-right: auto;*/
   margin: 0 auto;
 }
 
-.problem-wrap {
+.trouble-wrap {
   display: table;
 }
 
-.problem-wrap ul {
+.trouble-wrap ul {
   display: table-cell;
 }
 
