--- a/html/css/style.css
+++ b/html/css/style.css
@@ -19,7 +19,7 @@
 }
 
 #aboutus .wrapper img {
-  width: 150px;
+  width: 170px;
 }
 
 #case {
@@ -54,6 +54,11 @@
 
 #price table th {
   background-color: #B0FFA9;
+  background-color: #b7ffb7;
+}
+
+#price table td {
+  background-color: #fff;
 }
 
 /****************************/
@@ -69,6 +74,7 @@
 #QandA-1 dt {
   background: #B0FFA9;
   /* 「Q」タイトルの背景色 */
+  background: #b7ffb7;
   font-weight: bold;
   padding: 8px;
   border-radius: 25px;
@@ -94,4 +100,76 @@
 
 #QandA-1 .strong {
   font-weight: bold;
+}
+
+/****************************/
+/* trouble トラブルの原因 */
+/***************************/
+#trouble {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#trouble article {
+  margin-top: 20px;
+}
+
+.wrapper {
+  display: flex;
+}
+
+#trouble .wrapper img {
+  width: 170px;
+}
+
+/****************************/
+/* blog ブログ */
+/***************************/
+#blog {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#blog article {
+  margin-top: 20px;
+}
+
+.wrapper {
+  display: flex;
+}
+
+#blog .wrapper img {
+  width: 170px;
+}
+
+/****************************/
+/* News 新着情報 */
+/***************************/
+#body_news #news {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#body_news #news article {
+  margin-top: 20px;
+}
+
+.wrapper {
+  display: flex;
+}
+
+#body_news #news .wrapper img {
+  width: 170px;
+}
+
+#body_news #news .date {
+  width: 20%;
+  background: #cccccc;
+  /* 背景色 */
+  font-weight: bold;
+  padding: 0 10px;
+  border-radius: 25px;
 }
