--- a/html/css/common.css
+++ b/html/css/common.css
@@ -163,6 +163,65 @@ header {
   background-position: right center;
 }
 
+#first {
+  position: absolute;
+}
+
+#ddwn-menu {
+  width: 100%;
+  /*通常表示ではドロップダウンメニューを非表示*/
+  display: none;
+  /*親要素のbodyに固定表示*/
+  position: relative;
+  top: 58%;
+  left: 80%;
+}
+
+#ddwn-menu li a {
+  clear: both;
+}
+
+#ddwn-menu li ul li a {
+  background: #9fb7d4;
+}
+
+#ddwn a:hover {
+  background-color: red;
+}
+
+#globalNavi .nav .active {
+  background: #2f7f26;
+}
+
+#breadcrumb ul:first-child:before {
+  font-family: FontAwesome;
+  content: '\f015';
+  /* homeアイコンのunicode */
+}
+
+#breadcrumb {
+  clear: both;
+  padding: 10px;
+}
+
+#breadcrumb ul {
+  clear: both;
+  list-style-type: none;
+  padding: 10px;
+}
+
+#breadcrumb ul li {
+  display: inline;
+  margin-right: 5px;
+}
+
+#breadcrumb ul li a {
+  padding-right: 15px;
+  background-image: url(../images/breadcrumb_arrow.png);
+  background-repeat: no-repeat;
+  background-position: right center;
+}
+
 #breadcrumb ul:first-child:before {
   font-family: FontAwesome;
   content: '\f015';
