--- a/_resource/sass/style.scss
+++ b/_resource/sass/style.scss
@@ -141,3 +141,20 @@
   padding: 0 10px;
   border-radius: 25px;
 }
+/****************************/
+/* contact お問合せ・予約 */
+/***************************/
+#contact #mailform {
+  width:60%;
+  margin-left: auto;
+  margin-right: auto;
+  ul {
+  list-style-type: square;
+  li{margin-left:30px;}
+  }
+  strong {color:red;}
+  table tr:last-child {
+  text-align:center;
+  }
+}
+
